--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
-<h1><%= @article.title %></h1>
-<p> <%= @article.content %></p>
-<p> <%= @article.date %></p>
+<li><% @articles.each do |article| %></li>
+<h1><%= article.title %></h1>
+<p> <%= article.date %></p>
 
-
-<%= link_to "Go to Forum", topics_path(topic)%>
+  <%= link_to "read more", topic_article_path(@topic,article) %>
+<% end %>
