--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Topics</h1>
 <ul>
   <li><% @topics.each do |topic| %></li>
+  <p><%= topic.category %></p>
   <p><%= link_to "Info", topic_articles_path(topic) %></p>
   <p><%= link_to "Forum", topic_themes_path(topic) %></p>
   <% end %>
@@ -8,4 +9,4 @@
 
 
 
-<%= render %>
+
