topics cards pre-made

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,14 +1,16 @@
-<h1>Topics</h1>
-<div class="container">
-  <div class="cards">
-    <% @topics.each do |topic| %>
-    <div class="card-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-      <div class="card-footer">
-        <h2><%= topic.category %></h2>
-        <p><%= link_to "Info", topic_articles_path(topic) %></p>
-        <p><%= link_to "Forum", topic_themes_path(topic) %></p>
-      </div>
+<div class="full-page-container">
+  <div class="container">
+    <h1>Topics</h1>
+    <div class="cards">
+      <% @topics.each do |topic| %>
+        <div class="card">
+          <h2><%= topic.category %></h2>
+          <div class="links">
+            <p><%= link_to "Info", topic_articles_path(topic) %></p>
+            <p><%= link_to "Forum", topic_themes_path(topic) %></p>
+          </div>
+        </div>
+      <% end %>
     </div>
-    <% end %>
   </div>
 </div>
