--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -5,10 +5,11 @@
     <p><%= comment.content %></p>
     <p>by <%= comment.theme.user.username %></p>
     <p><%= comment.date %></p>
-    <% if comment.commentupvotes.present? %>
-      <%= link_to "dislike", commentupvotes_path(comment: comment), method: :delete %> 
+    
+    <% if comment.get_commentupvote_of_user(current_user) %>
+      <%= link_to "dislike", commentupvote_path(comment.get_commentupvote_of_user(current_user)), method: :delete %> 
     <% else %>
-      <%= link_to "like", commentupvotes_path(comment: comment), method: :post %> 
+      <%= link_to "like", comment_commentupvotes_path(comment), method: :post %> 
     <% end %>
     
     <p><%= comment.commentupvotes.count %></p>
