--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,8 +3,10 @@
 // For example:
 $red: #FD1015;
 $blue: #167FFB;
-$yellow: #FFC65A;
+$yellow: #FDDB3A;
 $orange: #E67E22;
 $green: #1EDD88;
-$gray: #0E0000;
+$gray: #52575D;
 $light-gray: #F4F4F4;
+
+
