--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,33 @@
 // Specific CSS for your home-page
+#home-container {
+
+
+}
+
+#content-wrap {
+
+}
+
+.body-color {
+  background-color: white;
+}
+
+.banner {
+
+}
+
+
+
+.title {
+  padding: 8px 16px;
+  margin: 60px 20px 60px 20px;
+  background-color: #FDDB3A;
+
+}
+
+#forum-card{
+  background-color: #F6F4E6;
+  width:100%;
+
+
+}
