--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,64 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-12 col-lg-6">
+      <div class="img-fluid" style="background-image: url('https://images.unsplash.com/photo-1556484687-30636164638b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80'); height: 500px; background-size: cover;"></div>
+        <div >
+          <h3 class="title"><strong>What's Kaabo?</strong></h3>
+            <p>Kaabo means “Welcome” in Youruba.  Kaabo app, it is a place to improve imigrants access to information in Portugal...</p>
+          <h3 class="title"><strong>How does it work?</strong></h3>
+                <p>Kaabo provides you clear and concrete official and community information regarding basic rights.  Enter a secton below and start your journey.</p>
+          <div id="forum-card">
+            <h3><strong>Kaabo Forum</strong></h3>
+                <p>Visit the Forum or join the Community. Search and share information, find support and make friends!</p>
+          </div>
+          <h3 class="title"><strong>Useful Information</strong></h3>
+        </div>
+        <div class="container">
+          <div class="card-deck">
+            <div class="card">
+              <img class="card-img-top" src="..." alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Education</h5>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="..." alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Housing</h5>
+            </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="..." alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Health</h5>
+              </div>
+            </div>
+          </div>
+
+            <div class="card">
+              <img class="card-img-top" src="..." alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Documents</h5>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="..." alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Jobs</h5>
+              </div>
+            </div>
+
+            <div class="card">
+              <img class="card-img-top" src="..." alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Inclusion</h5>
+              </div>
+
+    </div>
+  </div>
+</div>
+
+
+
+
+
