--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,7 +1,7 @@
 <div >
   <div>
-      <%= simple_form_for([@topic, @theme]) do |f| %>
-      <%= f.input :title %>
+      <%= simple_form_for([@theme, @comment]) do |f| %>
+      <%= f.input :content, as: :text %>
       <%= f.input :date, :as => :hidden, :input_html => { :value => Time.now } %>
       <%= f.submit %>
     <% end %>
