--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -20,9 +20,15 @@
   background-color: #F6F4E6;
 }
 
-.links {
+.card .icons {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%;
+}
+
+.links a {
+  color:black;
 }
 
 // Smallest device
