--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -4,9 +4,8 @@
     <div class="cards">
       <% @topics.each do |topic| %>
         <div class="card">
-          <h2><%= topic.category %></h2>
           <% topicname = topic.category %>
-          <%= image_tag "icons/icon#{topicname}.svg"%>
+          <%= image_tag "icons/icon#{topicname}.svg", width: 100, class: "icons" %>
           <div class="links">
             <p><%= link_to "#{topic.category}", topic_themes_path(topic) %></p>
           </div>
