--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   align-items: center;
   justify-content: space-between;
+  background-color: #FDDB3A;
 }
 
 .navbar-lewagon .navbar-collapse {
