--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,3 +1,4 @@
+<body class="body-color">
 <div class="full-page-container">
   <div class="container">
     <h1>Topics</h1>
@@ -14,4 +15,4 @@
     </div>
   </div>
 </div>
-
+</body>
