--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,14 @@
   </head>
 
   <body class="body-color">
-
-  <body>
   <%= render 'shared/navbar' %>
 
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
     <%= yield %>
+
+   <div> <%= render 'shared/footer' %></div>
   </body>
+
+
 </html>
