--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,5 +1,5 @@
 .body-color {
-  background-color: white; 
+  background-color: white;
 }
 
 .cards {
@@ -22,6 +22,10 @@
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   background-color: #F6F4E6;
+}
+
+.card img {
+  height: 100px;
 }
 
 .card .icons {
