--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -8,6 +8,8 @@
     <% end %>
 </div>
 
+<p> <%= link_to "Show all threads", topic_themes_path %> </p> 
+
 <div class="filters">
     <button type="button" id="type-filter" class="btn btn-outline-secondary">What's hot</button>
 </div>
@@ -31,7 +33,7 @@
     </div>
     <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="defaultCheck4">
-        <label class="form-check-label" for="defaultCheck4" id="defaultText4">Illegal</label>
+        <label class="form-check-label" for="defaultCheck4" id="defaultText4">Ilegal</label>
     </div>
 
     <br>
