--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -8,6 +8,8 @@
           <% end %>
         </div>
 
+<p> <%= link_to "Show all comments", topic_theme_path %> </p> 
+
 <% @comments.each do |comment| %>
     <p><%= comment.content %></p>
     <p>by <%= comment.theme.user.username %></p>
