dashboard and updated homepage

--- a/app/assets/stylesheets/pages/_topics_index.scss
+++ b/app/assets/stylesheets/pages/_topics_index.scss
@@ -2,6 +2,10 @@
   background-color: #41444B;
 }
 
-.body-color {
+body {
   background-color: white;
-} 
+}
+
+// .container {
+//   background-color: white;
+// }
