--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,21 +17,21 @@
               </div>
             </div>
           <div class="d-inline-flex p-2"><h4 class="title"><strong>Useful Information</strong></h4></div>
+
       <div class="cards">
         <% @topics.each do |topic| %>
-
-        <%= link_to topic_themes_path(topic) do %>
-      <div class="card">
-
-          <% topicname = topic.category %>
-          <%= image_tag "icons/icon#{topicname}.svg"%>
-          <div class="links">
-            <p><%= link_to "#{topic.category}", topic_themes_path(topic) %></p>
+          <div class='links'>
+            <%= link_to topic_themes_path(topic) do %>
+              <div class="card">
+                <% topicname = topic.category %>
+                <%= image_tag "icons/icon#{topicname}.svg"%>
+                <p><%= link_to "#{topic.category}", topic_themes_path(topic) %></p>
+              </div>
+            <% end %>
           </div>
-        </div>
-      <% end %>
-<% end %>
+        <% end %>
       </div>
+
       <div class="d-inline-flex p-2"><h4 class="title"><strong>Highlights</strong></h4></div>
       <h5>Education</h5>
       <h4>SCOLARSHIPS 20/21</h4>
