--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
           <%= link_to "Home", "/", class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Information", "#info", class: "nav-link" %>
+          <%= link_to "Information", "http://localhost:3000/#info", class: "nav-link" %>
         <li class="nav-item">
           <%= link_to "Forum", "/topics", class: "nav-link" %>
         </li>
