--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -23,3 +23,7 @@
     
     <p><%= comment.commentupvotes.count %></p>
 <% end %>
+<div class="container">
+  <div class="row">
+  <%= paginate @comments %>
+</div>
