themes index show tipics index

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -3,7 +3,7 @@
 
 <h1 class="forumtitle"> Kaabo Forum </h1>
 
-<div class="logo">
+<div class="logo d-flex justify-content-center">
 <%= image_tag "https://res.cloudinary.com/cassarola/image/upload/v1599155458/Design_sem_nome-removebg-preview1_rznueg.png" %>
 </div>
 
