--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -1,6 +1,11 @@
-<h1> <%= @theme.title %> </h1> 
-<p> Go back to <%= link_to @theme.topic.category, topic_themes_path %> </p> 
-<p> <%= link_to "Leave a comment", new_theme_comment_path(@theme) %> </p> 
+<h1> <%= @theme.title %> </h1>
+
+<div class="d-flex justify-content-between">
+<div class="btn-flat-inv"> Go back to <%= link_to @theme.topic.category, topic_themes_path %> </div>
+<div> <%= link_to "Leave a comment", new_theme_comment_path(@theme) %> </div>
+</div>
+
+
 
 <div class="form-inline d-flex" style="width:100%">
           <%= form_tag topic_theme_path, method: :get do %>
@@ -8,18 +13,24 @@
           <% end %>
         </div>
 
-<p> <%= link_to "Show all comments", topic_theme_path %> </p> 
+<p> <%= link_to "Show all comments", topic_theme_path %> </p>
+
+
 
 <% @comments.each do |comment| %>
-    <p><%= comment.content %></p>
-    <p>by <%= comment.theme.user.username %></p>
-    <p><%= comment.date %></p>
-    
+    <div data-type= '<%= comment.content%>' class="theme-card-show">
+      <div class="d-flex justify-content-between">
+    <div>by <%= comment.theme.user.username %></div>
+    <div><%= comment.date %></div>
+     </div>
+
     <% if comment.get_commentupvote_of_user(current_user) %>
-      <%= link_to "dislike", commentupvote_path(comment.get_commentupvote_of_user(current_user)), method: :delete %> 
+      <%= link_to "dislike", commentupvote_path(comment.get_commentupvote_of_user(current_user)), method: :delete %>
     <% else %>
-      <%= link_to "like", comment_commentupvotes_path(comment), method: :post %> 
+      <%= link_to "like", comment_commentupvotes_path(comment), method: :post %>
     <% end %>
-    
+
     <p><%= comment.commentupvotes.count %></p>
+  </div>
+
 <% end %>
