--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,9 +5,6 @@
 
 }
 
-.banner {
-
-}
 
 .title {
   background-color: #FDDB3A;
@@ -26,7 +23,7 @@ p {
   margin-right: 54px;
 }
 
-.container {
+.background-yellow {
   background-color: #F6F4E6;
   width:100%;
   text-align: center;
