--- a/app/views/comments/dashboard.html.erb
+++ b/app/views/comments/dashboard.html.erb
@@ -1,67 +1,64 @@
 <div class="container">
+  <div class="head">
+    <h1>Hi,</h1>
+    <%= @current_user.username %>
+  </div>
+
+  <div class="logo ">
+  <%= image_tag "https://res.cloudinary.com/cassarola/image/upload/v1599155458/Design_sem_nome-removebg-preview1_rznueg.png" %>
+  </div>
+
   <h5>My profile</h5>
   <% if @current_user.username.present? && @current_user.avatar.present? %>
   <p> My username: <%= @current_user.username %></p>
   <p> My avatar: <%= image_tag @current_user.avatar %></p>
-  <%= link_to "Edit profile", edit_user_path(@current_user) %>
+  <%= link_to "Edit profile", edit_user_path(@current_user), class: "edit-text" %>
   <% else %>
-  <p> You don't have a username or avatar, click "Complete profile" to create one!<p>
+  <p> You don't have a username or avatar, click "Complete profile" to create one!</p>
   <%= link_to "Complete profile", edit_user_path(@current_user) %>
   <% end %>
 
-  <h5>My follows<h5>
 
 
-  <h5>My threads</h5>
-</div>
+<h4 class="title">My Bookmarks</h4>
+<div class="card-wraper">
+<div class="card-body">
+  <% @my_bookmarks.each do |bookmark|%>
+      <p><%= bookmark.theme.title %></p>
+      <p> created on <%= bookmark.theme.date %></p>
 
-<div class="cards">
-  <% @my_themes.each do |theme|%>
-  <div class="card">
-    <p style="font-weight: 200; font-size: initial;"><%= theme.title %></p>
-    <p style="font-weight: 200; font-size: initial;"> created on <%= theme.date %></p>
-
-
-    <div class="d-flex justify-content-around">
-    <div> <%= link_to "Edit", edit_topic_theme_path(theme.topic, theme) %></div>
-    <div><%= link_to "Delete",
-
-<h2>My Bookmarks</h2>
-<% @my_bookmarks.each do |bookmark|%>
-    <p><%= bookmark.theme.title %></p>
-    <p> created on <%= bookmark.theme.date %></p>
-
-    <% if bookmark.theme.get_bookmark_of_user(current_user) %>
-    <%= link_to "unbookmark", theme_bookmark_path(bookmark.theme, bookmark.theme.get_bookmark_of_user(current_user)), method: :delete, :query => "dashboard" %>  
-  <% end %>
-
-  <% end %>
-
-<h2>My threads</h2>
-<% @my_themes.each do |theme|%>
-    <p><%= theme.title %></p>
-    <p> created on <%= theme.date %></p>
-    <%= link_to "Go to threads", topic_themes_path(theme.topic, theme) %>
-    <%= link_to "Edit", edit_topic_theme_path(theme.topic, theme) %>
-    <%= link_to "Delete",
-
-        topic_theme_path(theme.topic, theme),
-        method: :delete,
-        data: { confirm: "Are you sure?" } %></div>
-    </div>
-
-
-       </div>
-  <% end %>
-      <h4>My comments</h4>
-    <% @my_comments.each do |comment|%>
-        <p style="font-weight: 200; font-size: initial;"><%= comment.content %></p>
-        <p style="font-weight: 200; font-size: initial;"> created on <%= comment.date %></p>
-        </div>
+      <% if bookmark.theme.get_bookmark_of_user(current_user) %>
+      <%= link_to "unbookmark", theme_bookmark_path(bookmark.theme, bookmark.theme.get_bookmark_of_user(current_user)), method: :delete, :query => "dashboard" %>
     <% end %>
 
-<h2>My comments</h2>
-<% @my_comments.each do |comment|%>
+    <% end %>
+</div>
+</div>
+
+
+<h4 class="title">My threads</h4>
+<div class="card-wraper">
+    <div class="card-body">
+    <% @my_themes.each do |theme|%>
+      <p><%= theme.title %></p>
+      <p> created on <%= theme.date %></p>
+      <%= link_to "Go to threads", topic_themes_path(theme.topic, theme), class: "index-link" %>
+      <%= link_to "Edit", edit_topic_theme_path(theme.topic, theme) %>
+      <%= link_to "Delete",
+
+          topic_theme_path(theme.topic, theme),
+          method: :delete,
+          data: { confirm: "Are you sure?" } %>
+
+    <% end %>
+  </div>
+</div>
+
+
+<h4 class="title">My comments</h4>
+<div class="card-wraper">
+<div class="card-body">
+  <% @my_comments.each do |comment|%>
     <p><%= comment.content %></p>
     <p> created on <%= comment.date %></p>
     <%= link_to "Go to comments", topic_theme_path(comment.theme.topic, comment.theme) %>
@@ -71,3 +68,7 @@
         method: :delete,
         data: { confirm: "Are you sure?" } %>
 <% end %>
+</div>
+</div>
+
+</div>
