--- a/app/views/comments/dashboard.html.erb
+++ b/app/views/comments/dashboard.html.erb
@@ -66,7 +66,7 @@
     <p><%= comment.content %></p>
     <p> created on <%= comment.date %></p>
     <%= link_to "Go to comments", topic_theme_path(comment.theme.topic, comment.theme) %>
-    <%= link_to "Edit", edit_theme_comment_path(comment.theme.topic, comment.theme) %>
+    <%= link_to "Edit", edit_theme_comment_path(comment.theme, comment) %>
      <%= link_to "Delete",
         topic_theme_path(comment.theme.topic, comment.theme),
         method: :delete,
