--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
   <div>
       <%= simple_form_for(@user) do |f| %>
       <%= f.input :username %>
-      <%= f.input :avatar, as: :file %>
+      <%= f.input :photo, as: :file %>
       <%= f.submit %>
     <% end %>
   </div>
