--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,24 +1,25 @@
-<body class="body-color">
-<div class="full-page-container">
+<div class="container">
+
 
 <h1 class="forumtitle"> Kaabo Forum </h1>
 
-<div class="logo d-flex justify-content-center">
+<div class="log d-flex justify-content-center">
 <%= image_tag "https://res.cloudinary.com/cassarola/image/upload/v1599155458/Design_sem_nome-removebg-preview1_rznueg.png" %>
 </div>
-
-
-    <div class="cards">
-      <% @topics.each do |topic| %>
+    <div class="d-inline-flex p-2">
+      <div class=row>
+        <% @topics.each do |topic| %>
+        <div class="col-sm-6">
           <div class="card">
             <% topicname = topic.category %>
             <%= image_tag "icons/icon#{topicname}.svg", width: 100, class: "icons" %>
-            <div class="links">
-              <p><%= link_to "#{topic.category}", topic_themes_path(topic) %></p>
-            </div>
+             <div class="links">
+           <p><%= link_to "#{topic.category}", topic_themes_path(topic) %></p>
           </div>
-      <% end %>
-    </div>
+        </div>
+       </div>
+    <% end %>
+        </div>
+      </div>
 
 </div>
-</body>
