--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,7 @@
 
 
   <body>
-    <%= render 'shared/navbar' %>
-
-
-
+    <div><%= render 'shared/navbar' %></div>
 
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
