--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,19 @@
-<% @articles.each do |article| %>
-<%= image_tag article.image_url %>
-<h1><%= article.title %></h1>
-<p> <%= article.date %></p>
- <%= link_to "read more", topic_article_path(@topic,article) %>
-<% end %>
+<div class="index-page-container col-10">
+  <div class="articles">
+  <% @articles.each do |article| %>
+    <%= link_to topic_article_path(@topic,article) do  %>
+    <div class="cards-article row">
+        <div class="card-category col-6" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= url_for (article.image_url)  %>)"></div>
+        <div class="card-info col-4">
+          <h4 class="m-0 p-1"><%= article.title %></h4>
+          <p class="m-0 p-1"><%= article.date %></p>
+        </div>
+      </div>
+    <% end %>
+  <% end %>
+  </div>
+</div>
+
+
+
 
