--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar-lewagon {
   align-items: center;
   justify-content: space-between;
-  background-color: #FDDB3A;
+  background-color: #fddb3a;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -12,4 +12,7 @@
   width: 50px;
 }
 
-
+#search-card {
+  height: auto;
+  padding: 7px 15px 7px;
+}
