--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -4,9 +4,7 @@
 @import "themes_index";
 @import "themes_show";
 @import "dashboard";
-
-@import "articles_index"
-
+@import "articles_index";
 @import "themes_new";
-@import "themes_edit"
+@import "themes_edit";
 
