--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -1,27 +1,42 @@
+<div class="container">
+
 <h1> <%= @theme.title %> </h1>
 
-<div class="d-flex justify-content-between">
-<div class="btn-flat-inv"> Go back to <%= link_to @theme.topic.category, topic_themes_path %> </div>
-<div> <%= link_to "Leave a comment", new_theme_comment_path(@theme) %> </div>
-<div> <%= social_share_button_tag(@theme.title) %> </div>
-</div>
+
 
 
 
 <div class="form-inline d-flex" style="width:100%">
-          <%= form_tag topic_theme_path, method: :get do %>
-          <%= text_field_tag :query, params[:query], placeholder:"keyword", class: 'search-input pr-0 mr-0', style: "width:50%"%><%= submit_tag 'search', class: 'search-btn'%>
+          <div><%= form_tag topic_theme_path, method: :get do %> </div>
+           <div class="search-box"> <%= text_field_tag :query, params[:query], placeholder:"keyword", class: 'search-input pr-0 mr-0', style: "width:60%"%>
+            <%= submit_tag 'search', class: 'search-btn'%> </div>
           <% end %>
         </div>
 
-<p> <%= link_to "Show all comments", topic_theme_path(reset: true) %> </p>
 
-<%= link_to "Most liked", topic_theme_path(filter: 'likes'), class: "btn btn-primary" %>
- <%= link_to "Today", topic_theme_path(period: 'today'), class: "btn btn-primary" %>
- <%= link_to "This week", topic_theme_path(period: 'week'), class: "btn btn-primary" %>
- <%= link_to "This month", topic_theme_path(period: 'month'), class: "btn btn-primary" %>
- <%= link_to "This year", topic_theme_path(period: 'year'), class: "btn btn-primary" %>
- <%= link_to "All time", topic_theme_path(period: 'all'), class: "btn btn-primary" %>
+ <div class="btn-blocs">
+    <div class="d-flex justify-content-between">
+      <div class="row">
+     <%= link_to "Show all threads", topic_themes_path(reset: true), class: "btn btn-outline-secondary" %>
+     <%= link_to "Most liked", topic_themes_path(filter: 'likes'), class: "btn btn-outline-secondary" %>
+     <%= link_to "Most commented", topic_themes_path(filter: 'comments'), class: "btn btn-outline-secondary" %>
+     <%= link_to "Today", topic_themes_path(period: 'today'), class: "btn btn-outline-secondary" %>
+     <%= link_to "This week", topic_themes_path(period: 'week'), class: "btn btn-outline-secondary" %>
+     <%= link_to "This month", topic_themes_path(period: 'month'), class: "btn btn-outline-secondary"%>
+     <%= link_to "This year", topic_themes_path(period: 'year'), class: "btn btn-outline-secondary" %>
+    <!--  <%= link_to "All time", topic_themes_path(period: 'all'), class: "btn btn-outline-secondary" %> -->
+     </div>
+    </div>
+ </div>
+
+
+ <div class="d-flex justify-content-between">
+<div class="link-deco"> <%= link_to "Reply", new_theme_comment_path(@theme) %> </div>
+<div class="link-deco"> <%= link_to "Show all", topic_theme_path(reset: true) %> </div>
+</div>
+<br>
+<div> <%= social_share_button_tag(@theme.title) %> </div>
+
 
 
 <% @comments.each do |comment| %>
@@ -38,6 +53,8 @@
       <%= link_to "like", comment_commentupvotes_path(comment), method: :post %>
     <% end %>
 
+
+
     <p><%= comment.commentupvotes.count %></p>
 
   </div>
@@ -45,8 +62,13 @@
 <% end %>
 
 
+<div class="d-flex justify-content-between">
+<div class="btn-flat-inv" id="link-color-size"> back to <%= link_to @theme.topic.category, topic_themes_path %> </div>
+</div>
+
 <div class="container">
   <div class="row">
   <%= paginate @comments %>
 </div>
-
+</div>
+</div>
